[gd_scene load_steps=2 format=2]

[ext_resource path="res://Utils/Shaker.gd" type="Script" id=1]

[node name="Shaker" type="Node"]
script = ExtResource( 1 )

[node name="Duration" type="Timer" parent="."]

[node name="Frequency" type="Timer" parent="."]

[node name="ShakeTween" type="Tween" parent="."]

[connection signal="timeout" from="Duration" to="." method="_on_Duration_timeout"]
[connection signal="timeout" from="Frequency" to="." method="_on_Frequency_timeout"]
